--- a/Week3/1. Monday/Float/floatexercise.css
+++ b/Week3/1. Monday/Float/floatexercise.css
@@ -1,21 +1,21 @@
 
 
 .column1 {
-    float: left;
     background-color: purple;
     display: block;
     width: 300px;
-    height: 700px;
+    padding: 10px;
+    float: left;
 
 }
 
 .column2{
-    float:right;
+    float:left;
     color: red;
     background-color:orange;
     display: block;
-    width: 1300px;
-    height: 700px;
+    width: calc(100% - 340px);
+    padding: 10px;
 }
 
 .header, .footer {
@@ -27,6 +27,7 @@
 
     float: top;
 
+
 }
 .footer{
     float: bottom;
@@ -34,6 +35,8 @@
 }
 
 .box{
-
-    clear:left;
+    content: "";
+    clear: both;
+    display: table;
 }
+
