--- a/Week3/2. Tuesday/admin.css
+++ b/Week3/2. Tuesday/admin.css
@@ -23,15 +23,31 @@
     text-align: center;
     -webkit-text-fill-color: darkcyan;
 }
-
-.imgresize{
-    height: 37%;
+.purposeimg {
+    margin: auto;
+    display: block;
+    background-size: cover;
+    height: 60vh;
+    width: 100vw;
+    border: 1px solid red;
+    /*image-align: left;*/
+}
+.imgresize {
+    height: 50%;
     border: 1px solid red;
     display: block;
     margin: auto;
     width: 45%;
 
+
 }
+
+.p {
+
+    text-align: center;
+    font-size: 3.9vw;
+}
+
 h1 {
     margin: 0 0 30px 0;
     text-align: center;
