--- a/Week3/4.Thursday/myapp/templates/rickcities.html
+++ b/Week3/4.Thursday/myapp/templates/rickcities.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title></title>
 </head>
 <body>
+This is a compilation of Rick Sanchez fan art.
+
 
 </body>
 </html>
