--- a/Week3/4.Thursday/static/css/admin.css
+++ b/Week3/4.Thursday/static/css/admin.css
@@ -10,7 +10,7 @@
 }
 
 #bgpic{
-    background: url("/img/background.jpg") no-repeat center top;
+    background: url("/static/img/background.jpg") no-repeat center top;
     height: 100vh;
     background-size: cover;
 }
@@ -29,7 +29,7 @@
     background-size: cover;
     height: 60vh;
     width: 100vw;
-    border: 1px solid red;
+    border: 10px solid red;
     /*image-align: left;*/
 }
 .imgresize {
