--- a/Week3/4.Thursday/myapp/templates/admin.html
+++ b/Week3/4.Thursday/myapp/templates/admin.html
@@ -83,7 +83,7 @@
         </div>
 
             <div id="Morty" class="col-md-4 col-sm-12 col-lg-4"> <h2>Morty</h2>
-                 <img class="imgresize" src="/static/img/mortykitty.jpg" alt="Morty from Rick and Morty"> </img><br>
+                 <img class="imgresize" src="/static/img/Mortykitty.jpg" alt="Morty from Rick and Morty"> </img><br>
                 <ul>
                     <li>Very sensitive and lacks confidence.</li>
                     <li>Very helpful to his grandpa.</li>
